fixing width on mobile devices

--- a/style.css
+++ b/style.css
@@ -86,11 +86,3 @@ h2 {
   justify-content: center;
   align-items: center;
 }
-
-.navbar .navbar-nav .nav-link:not(.btn) i.fa{
-      font-size: 18px;
-      position: relative;
-      top: 3px;
-      text-align: center;
-      width: 21px;
-}
